syntax = "proto3";

package greet;
option go_package = "hello/hellopb";

message Hello {
	string first_name = 1;
	string last_name = 2;
}

message HelloRequest {
	Hello hello = 1;
}

message HelloResponse {
	string result = 1;
}

message HelloManyTimesRequest {
	Hello hello = 1;
}

message HelloManyTimesResponse {
	string result = 1;
}

message LongHelloRequest {
	Hello hello = 1;
}

message LongHelloResponse {
	string result = 1;
}

message HelloEveryoneRequest {
	Hello hello = 1;
}

message HelloEveryoneResponse {
	string result = 1;
}

service HelloService{
	// Unary
	rpc Hello(HelloRequest) returns (HelloResponse) {};

	// Server Streaming
	rpc HelloManyTimes(HelloManyTimesRequest) returns (stream HelloManyTimesResponse) {};

	// Client Streaming
	rpc LongHello(stream LongHelloRequest) returns (LongHelloResponse) {};

	// Bi-Directional Streaming
	rpc HelloEveryone(stream HelloEveryoneRequest) returns (stream HelloEveryoneResponse) {};
}